Fixed automatically showing the website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="app">
             <div id="sidebar">
                 <div id="sidebartop">
-                    <div id="website" onclick="document.querySelector('#content').setAttribute('current', 'website')">
+                    <div id="website" onclick="document.querySelector('#content').setAttribute('current', 'web')">
                         <div class="material-symbols-outlined">web</div>
                         <div class="sidebarlabel">WEBSITE</div>
                     </div>
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div id="content">
-                <iframe id="webiFrame" title="× deadcode ×" src="https://deadcode.is-a.dev"></iframe>
+                <section id="web"><iframe id="webiFrame" title="× deadcode ×" src="https://deadcode.is-a.dev"></iframe></section>
             </div>
         </div>
     </body>
