Fixed missing control buttons on Linux and possibly Mac
note: I did not have access to Mac to test this, but I figured I would just replace the window controls anyways.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
             <div id="titleleft">
                 <div id="windowlogo">××</div><div id="windowtitle">deadforge</div>
             </div>
+            <div id="controls">
+                <div id="minimize" class="material-symbols-outlined">minimize</div>
+                <div id="maximize" class="material-symbols-outlined">square</div>
+                <div id="close" class="material-symbols-outlined">close</div>
+            </div>
         </div>
         <div id="app">
             <div id="sidebar">
@@ -29,4 +34,5 @@
             </div>
         </div>
     </body>
+    <script src="index.js"></script>
 </html>
