Added a matrix rain background

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <a id="downloadlinux"><downloadbuttonsmall disabled></downloadbuttonsmall></a>
                 <a id="downloadmac"><downloadbuttonsmall disabled></downloadbuttonsmall></a>
             </downloadbuttonsarray>
+            <canvas></canvas>
         </hero>
     </body>
     <script src="index.js"></script>
+    <script src="matrix.js"></script>
 </html>
