Added Meta Tags

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <link rel="preload" as="image" href="img/windowsdisabled.png">
         <link rel="preload" as="image" href="img/linuxdisabled.png">
         <link rel="preload" as="image" href="img/macosdisabled.png">
+
+        <meta property="og:title" content="DeadForge">
+        <meta property="og:description" content="A launcher by DeadCode">
+        <meta property="og:site_name" content="DeadCode">
+        <meta property="og:image" content="https://deadcode.is-a.dev/DeadForge/img/banner.png">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="DeadForge">
+        <meta name="twitter:description" content="A launcher by DeadCode">
+        <meta name="twitter:image" content="https://deadcode.is-a.dev/DeadForge/img/banner.png">
     </head>
     <body>
         <hero>
