Added DeadCode Logo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </head>
     <body>
         <hero>
+            <a id="logo" href="/"><logo>× ×</logo></a>
             <heading>DeadForge</heading>
             <subheading>A launcher by DeadCode</subheading>
             <a id="downloadbutton"><downloadbutton disabled="">Download</downloadbutton></a>
