Added auto-update system
Note: This has been tested on Windows so far, will test and possibly bug-fix on Linux, maybe Mac too.

GIANT THANKS to Qlexc (@MusicOnStereo) for helping fix async issues and help find an installer bug!

Co-Authored-By: QlexcTheFox <80660200+musiconstereo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="window">
             <div id="titleleft">
-                <div id="windowlogo">××</div><div id="windowtitle">deadforge</div>
+                <div id="windowlogo">××</div><div id="windowtitle">deadforge</div><div id="updatestatus" class="material-symbols-outlined"></div>
             </div>
             <div id="controls">
                 <div id="minimize" class="material-symbols-outlined">minimize</div>
