--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                         <div class="material-symbols-outlined">web</div>
                         <div class="sidebarlabel">WEBSITE</div>
                     </div>
+                    <div id="library" onclick="document.querySelector('#content').setAttribute('current', 'library')">
+                        <div class="material-symbols-outlined">joystick</div>
+                        <div class="sidebarlabel">LIBRARY</div>
+                    </div>
                 </div>
                 <div id="sidebarbottom">
                     <div id="settings" onclick="document.querySelector('#content').setAttribute('current', 'settings')">
@@ -67,6 +71,22 @@
                             <span>This Launcher has been developed by kanshen.click (from Team DeadCode). Special thanks to Qlexc (<b><a href="https://github.com/MusicOnStereo" target="_blank">@MusicOnStereo</a></b>) for helping with async issues, you are amazing!<br><br><kaomoji>  ႔ ႔<br>ᠸ^ ^  <</kaomoji></span>
                         </div>
                     </div>
+                </section>
+                <section id="library">
+                    <gamesection id="con">
+                        <blank><button class="disabled">Coming 2024</button></blank>
+                        <info>
+                            <div class="gametitle">ConRPG</div>
+                            <div class="gamesubtitle">An RPG in your Terminal, made with C++</div>
+                        </info>
+                    </gamesection>
+                    <gamesection id="restorebackup">
+                        <blank><a href="https://deadcode.is-a.dev/RestoreBackup" target="_blank"><button class="disabled">Coming 2025</button></a></blank>
+                        <info>
+                            <div class="gametitle">RestoreBackup?</div>
+                            <div class="gamesubtitle">That computer is hiding a lot more than what is on the surface.</div>
+                        </info>
+                    </gamesection>
                 </section>
             </div>
         </div>
