--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <div id="windowlogo">××</div><div id="windowtitle">deadforge</div><div id="updatestatus" class="material-symbols-outlined" status="appnotloaded"></div>
             </div>
             <div id="controls">
-                <div id="minimize" class="material-symbols-outlined">minimize</div>
+                <div id="minimize" class="material-symbols-outlined">horizontal_rule</div>
                 <div id="maximize" class="material-symbols-outlined">square</div>
                 <div id="close" class="material-symbols-outlined">close</div>
             </div>
