--- a/index.html
+++ b/index.html
@@ -68,7 +68,24 @@
                         <div class="settingsmaincontentbox">
                             <settingsheading>Credits</settingsheading>
                             <hr>
-                            <span>This Launcher has been developed by kanshen.click (from Team DeadCode). Special thanks to Qlexc (<b><a href="https://github.com/MusicOnStereo" target="_blank">@MusicOnStereo</a></b>) for helping with async issues, you are amazing!<br><br><kaomoji>  ႔ ႔<br>ᠸ^ ^  <</kaomoji></span>
+                            <creditsline>
+                                <creditbanner>
+                                    <creditpfp><img src="https://github.com/RichardKanshen.png"></creditpfp>
+                                    <creditinfo>
+                                        <creditname>kanshen <logo>××</logo></creditname>
+                                        <credittype>Developer</credittype>
+                                    </creditinfo>
+                                </creditbanner>
+                                <creditbanner>
+                                    <creditpfp><img src="https://github.com/MusicOnStereo.png"></creditpfp>
+                                    <creditinfo>
+                                        <creditname>Qlexc (<b><a href="https://github.com/MusicOnStereo" target="_blank">@MusicOnStereo</a></b>)</creditname>
+                                        <credittype>JavaScript God™</credittype>
+                                    </creditinfo>
+                                </creditbanner>
+                            </creditsline>
+                            <br>
+                            <span><kaomoji>  ႔ ႔<br>ᠸ^ ^  <</kaomoji></span>
                         </div>
                     </div>
                 </section>
