--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
                             </settingsoption>
                             <settingsoption>
                                 <label for="StartupSwitch">Run DeadForge on Startup</label>
-                                <input type="checkbox" id="StartupSwitch" switch="true">
+                                <input type="checkbox" id="StartupSwitch" switch="false">
                                 <label for="StartupSwitch" switchlabel></label>
+                                <br compatlayer>
+                            </settingsoption>
+                            <settingsoption>
+                                <label for="BetaSwitch">Enable Beta Updates (Pre-Release Tags on GitHub)</label>
+                                <input type="checkbox" id="BetaSwitch" switch="false">
+                                <label for="BetaSwitch" switchlabel></label>
                                 <br compatlayer>
                             </settingsoption>
                         </div>
