--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                                 <label for="BetaSwitch" switchlabel></label>
                                 <br compatlayer>
                             </settingsoption>
+                            <settingsoption>
+                                <label for="TraySwitch">Close to Tray</label>
+                                <input type="checkbox" id="TraySwitch" switch="false">
+                                <label for="TraySwitch" switchlabel></label>
+                                <br compatlayer>
+                            </settingsoption>
                         </div>
                         <div class="settingsmaincontentbox">
                             <settingsheading>Credits</settingsheading>
