Added a launcher update progress bar into settings

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <div id="updatestatusSETTINGS" class="material-symbols-outlined" status="checking"></div>
                         <div id="updatestatusSETTINGSstring">Checking for updates...</div>
                         <div id="updateCheckSETTINGS" onclick="checkForUpdates();">Check Updates</div>
+                        <progress id="launcherUpdateProgress"></progress>
                     </div>
                     <div id="settingsMainContent">
                         <div class="settingsmaincontentbox">
