Added Offline State checks
- Added an offline page for when user tries to access the website section without Internet connection;
- Added placeholder images for when the user is not Online to download images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="window">
             <div id="titleleft">
-                <div id="windowlogo">××</div><div id="windowtitle">deadforge</div><div id="updatestatus" class="material-symbols-outlined" status="appnotloaded"></div>
+                <div id="windowlogo">××</div><div id="windowtitle">deadforge</div><div id="onlinestatus" class="material-symbols-outlined"><div id="updatestatus" class="material-symbols-outlined" status="appnotloaded"></div></div>
             </div>
             <div id="controls">
                 <div id="minimize" class="material-symbols-outlined">horizontal_rule</div>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div id="content">
-                <section id="web"><iframe id="webiFrame" title="× deadcode ×" src="https://deadcode.is-a.dev"></iframe></section>
+                <section id="web"><iframe id="webiFrame" title="× deadcode ×" src="418.html"></iframe></section>
                 <section id="settings">
                     <div id="updateHERO">
                         <div id="updatestatusSETTINGS" class="material-symbols-outlined" status="checking"></div>
@@ -83,14 +83,14 @@
                             <hr>
                             <creditsline>
                                 <creditbanner>
-                                    <creditpfp><img src="https://github.com/RichardKanshen.png"></creditpfp>
+                                    <creditpfp><object data="https://github.com/RichardKanshen.png"><img src="res/DEADFORGE.icon.png"></object></creditpfp>
                                     <creditinfo>
                                         <creditname>kanshen <logo>××</logo></creditname>
                                         <credittype>Developer</credittype>
                                     </creditinfo>
                                 </creditbanner>
                                 <creditbanner>
-                                    <creditpfp><img src="https://github.com/MusicOnStereo.png"></creditpfp>
+                                    <creditpfp><object data="https://github.com/MusicOnStereo.png"><img src="res/DEADFORGE.icon.png"></object></creditpfp>
                                     <creditinfo>
                                         <creditname>Qlexc (<b><a href="https://github.com/MusicOnStereo" target="_blank">@MusicOnStereo</a></b>)</creditname>
                                         <credittype>JavaScript God™</credittype>
