--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a id="downloadlinux"><downloadbuttonsmall disabled></downloadbuttonsmall></a>
                 <a id="downloadmac"><downloadbuttonsmall disabled></downloadbuttonsmall></a>
             </downloadbuttonsarray>
-            <canvas></canvas>
+            <canvas width="1920" height="1080"></canvas>
         </hero>
     </body>
     <script src="index.js"></script>
