--- a/notification.html
+++ b/notification.html
@@ -10,7 +10,7 @@
                     <div id="notificationtitle">deadforge</div>
                 </left>
                 <right>
-                    <div id="notificationclose" class="material-symbols-outlined" onclick="closeNotification(null)">close</div>
+                    <div id="notificationclose" class="material-symbols" onclick="closeNotification(null)">close</div>
                 </right>
             </div>
             <div id="notificationcontent">
