--- a/418.html
+++ b/418.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <span>i'm a coffeepot</span>
-        <div class="material-symbols-outlined" id="coffee">coffee</div>
+        <div class="material-symbols" id="coffee">coffee</div>
         <span>and you don't have internet</span>
     </body>
     <script>document.querySelector('html').classList.add(parent.document.querySelector("html").classList.contains('dark') ? 'dark' : 'light')</script>
