--- a/update.html
+++ b/update.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="update.css">
-        <title>update downloaded</title>
+        <title>new collection</title>
     </head>
     <body>
         <div id="window">
@@ -13,11 +13,11 @@
             <div id="updatemessage">Update has been downloaded.</div>
             <div id="choices">
                 <div class="choice" id="choicenow" onclick="updateNow()">
-                    <choiceicon class="material-symbols-outlined">restart_alt</choiceicon>
+                    <choiceicon class="material-symbols">restart_alt</choiceicon>
                     <choicetext>Install now</choicetext>
                 </div>
                 <div class="choice" id="choiceclose" onclick="updateUponClose()">
-                    <choiceicon class="material-symbols-outlined">schedule</choiceicon>
+                    <choiceicon class="material-symbols">schedule</choiceicon>
                     <choicetext>Install after closing</choicetext>
                 </div>
             </div>
