--- a/index.html
+++ b/index.html
@@ -6,37 +6,37 @@
     <body>
         <div id="window">
             <div id="titleleft">
-                <div id="windowlogo">××</div><div id="windowtitle">deadforge</div><div id="onlinestatus" class="material-symbols-outlined"><div id="updatestatus" class="material-symbols-outlined" status="appnotloaded"></div></div>
+                <div id="windowlogo">××</div><div id="windowtitle">deadforge</div><div id="onlinestatus" class="material-symbols"><div id="updatestatus" class="material-symbols" status="appnotloaded"></div></div>
             </div>
             <div id="controls">
-                <div id="minimize" class="material-symbols-outlined">horizontal_rule</div>
-                <div id="maximize" class="material-symbols-outlined">square</div>
-                <div id="close" class="material-symbols-outlined">close</div>
+                <div id="minimize" class="material-symbols">horizontal_rule</div>
+                <div id="maximize" class="material-symbols">square</div>
+                <div id="close" class="material-symbols">close</div>
             </div>
         </div>
         <div id="app">
             <div id="sidebar">
                 <div id="sidebartop">
                     <div id="website" onclick="document.querySelector('#content').setAttribute('current', 'web')">
-                        <div class="material-symbols-outlined">web</div>
+                        <div class="material-symbols">web</div>
                         <div class="sidebarlabel">WEBSITE</div>
                     </div>
                     <div id="library" onclick="document.querySelector('#content').setAttribute('current', 'library')">
-                        <div class="material-symbols-outlined">joystick</div>
+                        <div class="material-symbols">joystick</div>
                         <div class="sidebarlabel">LIBRARY</div>
                     </div>
                 </div>
                 <div id="sidebarbottom">
                     <div id="settings" onclick="document.querySelector('#content').setAttribute('current', 'settings')">
-                        <div class="material-symbols-outlined">settings</div>
+                        <div class="material-symbols">settings</div>
                         <div class="sidebarlabel">OPTIONS & CREDITS</div>
                     </div>
                     <div id="switchColorMode" onclick="updateColorPreference()">
-                        <div class="material-symbols-outlined"></div>
+                        <div class="material-symbols"></div>
                         <div class="sidebarlabel"></div>
                     </div>
-                    <div id="collapse" onclick="document.querySelector('#sidebar').classList.toggle('collapsed')">
-                        <div class="material-symbols-outlined">menu</div>
+                    <div id="collapse" onclick="document.querySelector('#sidebar').classList.toggle('collapsed'); ipcRenderer.send('sidebarCollapse', document.querySelector('#sidebar').classList.contains('collapsed'))">
+                        <div class="material-symbols">menu</div>
                         <div class="sidebarlabel">COLLAPSE</div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                 <section id="web"><iframe id="webiFrame" title="× deadcode ×" src="418.html"></iframe></section>
                 <section id="settings">
                     <div id="updateHERO">
-                        <div id="updatestatusSETTINGS" class="material-symbols-outlined" status="checking"></div>
+                        <div id="updatestatusSETTINGS" class="material-symbols" status="checking"></div>
                         <div id="updatestatusSETTINGSstring">Checking for updates...</div>
                         <div id="updateCheckSETTINGS" onclick="checkForUpdates();">Check Updates</div>
                         <progress id="launcherUpdateProgress"></progress>
@@ -103,20 +103,51 @@
                     </div>
                 </section>
                 <section id="library">
-                    <gamesection id="con">
-                        <blank><button class="disabled">Coming 2024</button></blank>
-                        <info>
-                            <div class="gametitle">ConRPG</div>
-                            <div class="gamesubtitle">An RPG in your Terminal, made with C++</div>
-                        </info>
-                    </gamesection>
-                    <gamesection id="restorebackup">
-                        <blank><a href="https://deadcode.is-a.dev/RestoreBackup" target="_blank"><button class="disabled">Coming 2025</button></a></blank>
-                        <info>
-                            <div class="gametitle">RestoreBackup?</div>
-                            <div class="gamesubtitle">That computer is hiding a lot more than what is on the surface.</div>
-                        </info>
-                    </gamesection>
+                    <subsection id="libraryHeader">
+                            <div class="collection-container">
+                                <label for="collectionSelect">Collection</label>
+                                <select id="collectionSelect">
+                                    <option value="" selected>All Games</option>
+                                    <option value="❤️">❤️</option>
+                                </select>
+                                <button id="addCollectionButton" class="material-symbols" disabled title="Coming Soon">add</button>
+                            </div>
+                            <div class="viewmode-container">
+                                <input type="radio" id="inputViewBanner" name="libraryViewOptions">
+                                <label for="inputViewBanner"><span class="material-symbols">view_agenda</span></label>
+                              
+                                <input type="radio" id="inputViewGrid" name="libraryViewOptions" checked>
+                                <label for="inputViewGrid"><span class="material-symbols">grid_view</span></label>
+                              
+                                <input type="radio" id="inputViewList" name="libraryViewOptions">
+                                <label for="inputViewList"><span class="material-symbols">view_list</span></label>
+                              </div>
+                              <div class="sort-container">
+                                <label for="sortSelect">Sort by:</label>
+                                <select id="sortSelect">
+                                    <option value="nameAscending">Name (A-Z)</option>
+                                    <option value="nameDescending">Name (Z-A)</option>
+                                    <option value="DORAscending">Date of Release (Oldest first)</option>
+                                    <option value="DORDescending">Date of Release (Newest first)</option>
+                                </select>
+                            </div>
+                    </subsection>
+                    <games>
+                        <gamesection id="con" data-gametitle="ConRPG" data-gamedor="2024XXXX" data-currentcollection="true">
+                            <blank><button class="disabled">Coming 2024</button></blank>
+                            <info>
+                                <div class="gametitle">ConRPG <label class="favourite-checkbox"><input type="checkbox" onchange="toggleFavourite('ConRPG')"><span class="favourite-checkbox-label material-symbols">favorite_border</span></label></div>
+                                <div class="gamesubtitle">An RPG in your Terminal, made with C++</div>
+                            </info>
+                        </gamesection>
+                        <gamesection id="restorebackup" data-gametitle="RestoreBackup?" data-gamedor="2025XXXX" data-currentcollection="true">
+                            <blank><a href="https://deadcode.is-a.dev/RestoreBackup" target="_blank"><button class="disabled">Coming 2025</button></a></blank>
+                            <info>
+                                <div class="gametitle">RestoreBackup? <label class="favourite-checkbox"><input type="checkbox" onchange="toggleFavourite('RestoreBackup?')"><span class="favourite-checkbox-label material-symbols">favorite_border</span></label></div>
+                                <div class="gamesubtitle">That computer is hiding a lot more than what is on the surface.</div>
+                            </info>
+                        </gamesection>
+                    </games>
                 </section>
             </div>
         </div>
