--- a/notification.html
+++ b/notification.html
@@ -15,6 +15,7 @@
             </div>
             <div id="notificationcontent">
                 <div id="notificationinfotitle"></div>
+                <div id="notificationinfoheading"></div>
                 <div id="notificationinfo"></div>
                 <div id="notificationbuttons">
                     <button id="notificationbuttonA" onclick="notificationActionA()"></button>
